--- a/whoami/whoami.yaml
+++ b/whoami/whoami.yaml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: whoami
     spec:
+      nodeSelector:
+        kubernetes.io/os: linux
       containers:
       - name: whoami
         resources:
